# tf2-eegmodels

./: .gitignore  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
tf2_eegmodels/models/: __init__.py  brainnet.py  deepconvnet.py  eegnet.py  eegnet_v4.py  shallowconvnet.py  ssvepformer.py  taskorinet.py
